Añadimos el de machado

--- a/css/animals.css
+++ b/css/animals.css
@@ -725,4 +725,107 @@
   --tri28-ped-bg: #ac9393;
   --tri29-ped-bg: #2b0000;
   --tri30-ped-bg: #000000;
+
+  /** Javier Machado **/
+  --tri01-mach-polygon: polygon(107% 27.66%, 91% 25.33%, 102% 32%);
+  --tri02-mach-polygon: polygon(69% 31.49%, 91% 25.33%, 102% 32%);
+  --tri03-mach-polygon: polygon(69% 31.49%, 95% 36.83%, 102% 32%);
+  --tri04-mach-polygon: polygon(69% 31.49%, 95% 36.83%, 83.2% 43%);
+  --tri05-mach-polygon: polygon(69% 31.49%, 60% 38.5%, 83.2% 43%);
+  --tri06-mach-polygon: polygon(73.6% 46.32%, 60% 38.5%, 83.2% 43%);
+  --tri07-mach-polygon: polygon(73.6% 46.32%, 60% 38.5%, 64.2% 49%);
+  --tri08-mach-polygon: polygon(54.2% 43.32%, 60% 38.5%, 64.2% 49%);
+  --tri09-mach-polygon: polygon(54.2% 43.32%, 57% 53.83%, 64.2% 49%);
+  --tri10-mach-polygon: polygon(54.2% 43.32%, 57% 53.83%, 51% 54.5%);
+  --tri11-mach-polygon: polygon(54.2% 43.32%, 47% 49%, 51% 54.5%);
+  --tri12-mach-polygon: polygon(46% 55.15%, 47% 49%, 51% 54.5%);
+  --tri13-mach-polygon: polygon(46% 55.15%, 47% 49%, 35.4% 44.83%);
+  --tri14-mach-polygon: polygon(46% 55.15%, 27.8% 55.17%, 35.4% 44.83%);
+  --tri15-mach-polygon: polygon(46% 55.15%, 27.8% 55.17%, 44.2% 65.83%);
+  --tri16-mach-polygon: polygon(46% 55.15%, 53.2% 62%, 44.2% 65.83%);
+  --tri17-mach-polygon: polygon(46% 55.15%, 53.2% 62%, 57.2% 53.5%);
+  --tri18-mach-polygon: polygon(66.2% 65.98%, 53.2% 62%, 57.2% 53.5%);
+  --tri19-mach-polygon: polygon(55.4% 68.31%, 69.4% 74.17%, 64.6% 67.33%);
+  --tri20-mach-polygon: polygon(66.2% 65.98%, 53.2% 62%, 62.6% 68.5%);
+  --tri21-mach-polygon: polygon(55.4% 68.31%, 53.2% 62%, 62.6% 68.5%);
+  --tri22-mach-polygon: polygon(66.2% 65.98%, 67% 70.83%, 62.6% 68.5%);
+  --tri23-mach-polygon: polygon(66.2% 65.98%, 67% 70.83%, 74.6% 76%);
+  --tri24-mach-polygon: polygon(68.4% 73.48%, 67% 70.83%, 74.6% 76%);
+  --tri25-mach-polygon: polygon(55.8% 68.32%, 53.2% 62%, 44.2% 65.83%);
+  --tri26-mach-polygon: polygon(23% 40.98%, 27.8% 55.17%, 35.4% 44.83%);
+  --tri27-mach-polygon: polygon(23% 40.98%, 38.6% 36.84%, 35.4% 44.83%);
+  --tri28-mach-polygon: polygon(45.2% 38.31%, 38.6% 36.84%, 35.4% 44.83%);
+  --tri29-mach-polygon: polygon(45.2% 38.31%, 38.6% 36.84%, 40.6% 34%);
+  --tri30-mach-polygon: polygon(36.2% 27.14%, 38.6% 36.84%, 40.6% 34%);
+  --tri31-mach-polygon: polygon(36.2% 27.14%, 38.6% 36.84%, 28.2% 29.67%);
+  --tri32-mach-polygon: polygon(36.2% 27.14%, 31.8% 24.01%, 28.2% 29.67%);
+  --tri33-mach-polygon: polygon(25.4% 26.81%, 31.8% 24.01%, 28.2% 29.67%);
+  --tri34-mach-polygon: polygon(25.4% 26.81%, 31.8% 24.01%, 24.8% 23.84%);
+  --tri35-mach-polygon: polygon(25.4% 26.81%, 18.4% 28.84%, 24.8% 23.84%);
+  --tri36-mach-polygon: polygon(15.4% 26.48%, 18.4% 28.84%, 24.8% 23.84%);
+  --tri37-mach-polygon: polygon(15.4% 26.48%, 18.4% 28.84%, -6.6% 24.84%);
+  --tri38-mach-polygon: polygon(15.2% 30.15%, 18.4% 28.84%, -6.6% 24.84%);
+  --tri39-mach-polygon: polygon(15.2% 30.15%, 18.4% 28.84%, 19.8% 34.17%);
+  --tri40-mach-polygon: polygon(24.8% 30.32%, 18.4% 28.84%, 19.8% 34.17%);
+  --tri41-mach-polygon: polygon(24.8% 30.32%, 18.4% 28.84%, 25.6% 26.5%);
+  --tri42-mach-polygon: polygon(24.8% 30.32%, 28.6% 29.34%, 25.6% 26.5%);
+  --tri43-mach-polygon: polygon(23% 40.98%, 38.6% 36.84%, 28% 29.16%);
+  --tri44-mach-polygon: polygon(23% 40.98%, 24% 30.34%, 28% 29.16%);
+  --tri45-mach-polygon: polygon(23% 40.98%, 24% 30.34%, 19.4% 33.99%);
+  --tri46-mach-polygon: polygon(45.2% 38.31%, 47.4% 49.34%, 35.4% 44.83%);
+  --tri47-mach-polygon: polygon(45.2% 38.31%, 47% 49.34%, 54.4% 43.33%);
+  --tri48-mach-polygon: polygon(45.2% 38.31%, 58.2% 32.84%, 54.2% 43.67%);
+  --tri49-mach-polygon: polygon(60.2% 38.81%, 58.2% 32.84%, 54% 43.33%);
+  --tri50-mach-polygon: polygon(60% 38.97%, 58.2% 32.84%, 69.2% 31.83%);
+
+  --tri01-mach-bg: #0e8755;
+  --tri02-mach-bg: #10a969;
+  --tri03-mach-bg: #b14bcb;
+  --tri04-mach-bg: #8e20bb;
+  --tri05-mach-bg: #b14bcb;
+  --tri06-mach-bg: #10a969;
+  --tri07-mach-bg: #8e20bb;
+  --tri08-mach-bg: #b14bcb;
+  --tri09-mach-bg: #8e20bb;
+  --tri10-mach-bg: #b14bcb;
+  --tri11-mach-bg: #9d2ec0;
+  --tri12-mach-bg: #fc5f0a;
+  --tri13-mach-bg: #10a969;
+  --tri14-mach-bg: #b14bcb;
+  --tri15-mach-bg: #8e20bb;
+  --tri16-mach-bg: #10a969;
+  --tri17-mach-bg: #0d8f58;
+  --tri18-mach-bg: #10a969;
+  --tri19-mach-bg: #b14bcb;
+  --tri20-mach-bg: #0d8f58;
+  --tri21-mach-bg: #8e20bb;
+  --tri22-mach-bg: #107dd0;
+  --tri23-mach-bg: #0e8f58;
+  --tri24-mach-bg: #8d1db9;
+  --tri25-mach-bg: #f7c917;
+  --tri26-mach-bg: #fac914;
+  --tri27-mach-bg: #f8dc4d;
+  --tri28-mach-bg: #fac914;
+  --tri29-mach-bg: #0da864;
+  --tri30-mach-bg: #0c8c56;
+  --tri31-mach-bg: #0da864;
+  --tri32-mach-bg: #0c8c56;
+  --tri33-mach-bg: #0da864;
+  --tri34-mach-bg: #0c8c56;
+  --tri35-mach-bg: #fac914;
+  --tri36-mach-bg: #0da864;
+  --tri37-mach-bg: #b14bcb;
+  --tri38-mach-bg: #8e20bb;
+  --tri39-mach-bg: #b14bcb;
+  --tri40-mach-bg: #8e20bb;
+  --tri41-mach-bg: #0e7fcf;
+  --tri42-mach-bg: #f76205;
+  --tri43-mach-bg: #8e22bd;
+  --tri44-mach-bg: #9b32bf;
+  --tri45-mach-bg: #b04bcb;
+  --tri46-mach-bg: #098e56;
+  --tri47-mach-bg: #0d814d;
+  --tri48-mach-bg: #0fad68;
+  --tri49-mach-bg: #098952;
+  --tri50-mach-bg: #10ac6a;
 }
