--- a/css/logo.css
+++ b/css/logo.css
@@ -76,7 +76,7 @@
     --tri36-logo-bg: #d2b48c;
     --tri37-logo-bg: #c2a47c;
 
-    /* Colores de fondo de los triángulos */
+     /* DAW */
     --tri01-daw-bg: #1f7a1f;
     --tri02-daw-bg: #28a745;
     --tri03-daw-bg: #3ecf3e;
@@ -89,17 +89,20 @@
     --tri10-daw-bg: #43a047;
     --tri11-daw-bg: #2e7d32;
     --tri12-daw-bg: #81c784;
+    --tri13-daw-bg: #56a35a;
 
-    /* Polígonos de los triángulos */
-    --tri01-daw-polygon: polygon(-0.57% 23.11%, 5.86% 38.42%, 0.87% 99.71%);
-    --tri02-daw-polygon: polygon(-2.82% 20.22%, 22.75% 48.52%, 16.1% 64.44%);
-    --tri03-daw-polygon: polygon(23.31% 47.11%, 14.80% 64.47%, 18.7% 82.09%);
-    --tri04-daw-polygon: polygon(17.25% 65.31%, -0.8% 99.71%, 18.41% 82.09%);
-    --tri05-daw-polygon: polygon(61.95% 100.81%, 47.58% 28.30%, 48.85% 63.57%);
-    --tri06-daw-polygon: polygon(47.38% 29.81%, 49.72% 62.71%, 24.98% 94.51%);
-    --tri07-daw-polygon: polygon(56.91% 81.80%, 54.05% 72.24%, 35.38% 76.89%);
-    --tri08-daw-polygon: polygon(63.26% 21.38%, 62.75% 98.27%, 71.88% 64.15%);
-    --tri09-daw-polygon: polygon(79.74% 86.69%, 77.22% 38.19%, 74.05% 55.2%);
-    --tri10-daw-polygon: polygon(66.17% 82.36%, 77.22% 38.19%, 76.07% 57.22%);
-    --tri11-daw-polygon: polygon(78.38% 65.02%, 80% 100%, 93.36% 23.97%);
+    --tri01-daw-polygon: polygon(-0.57% 13.11%, 6.72% 38.53%, 0.87% 89.71%);
+    --tri02-daw-polygon: polygon(-2.82% 10.22%, 23.91% 41.98%, 6.86% 38.56%);
+    --tri03-daw-polygon: polygon(13.78% 64.55%, 23.76% 40.6%, 18.99% 71.51%);
+    --tri04-daw-polygon: polygon(13.49% 40%, 24.05% 41.18%, 18.99% 71.51%);
+    --tri05-daw-polygon: polygon(17.83% 55.59%, -0.8% 89.71%, 18.99% 71.22%);
+    --tri06-daw-polygon: polygon(1.07% 70.33%, -0.8% 89.71%, 8.01% 77.57%);
+    --tri07-daw-polygon: polygon(61.95% 90.81%, 44.98% 13.1%, 45.10% 44.33%);
+    --tri08-daw-polygon: polygon(45.07% 13.75%, 45.68% 44.62%, 24.98% 84.51%);
+    --tri09-daw-polygon: polygon(43.62% 67.76%, 54.05% 62.24%, 33.65% 62.85%);
+    --tri10-daw-polygon: polygon(63.26% 11.38%, 69.1% 87.41%, 76.50% 55.89%);
+    --tri11-daw-polygon: polygon(80.90% 24.70%, 78.96% 57.64%, 69.15% 88.24%);
+    --tri12-daw-polygon: polygon(80.90% 24.41%, 78.38% 59.37%, 89.08% 89.4%);
+    --tri13-daw-polygon: polygon(84.16% 57.91%, 89.24% 89.42%, 97.40% 14.26%);
+
 }
